# EURO2024

./: .gitignore  README.md  tree_dirs.py
Documentations/: README.md
Mecanique/: README.md
Mecanique/MecanismePaneau/: mecanismePaneau.SLDASM
Mecanique/PAMI/: assemblagepami.SLDASM
ROS/: txt
Test/: README.md
Tools/: README.md  RRTbasePY.py  homography_matrix.npz  robot_tracking_kalman.py  test.py
Tools/PAMI_Nav/: PAMI_Nav.ino  init.ino  pamiworks.ino  testmathpami.c
Tools/PP/: README.md  RRT.py  RRTbasePY.py  RRToptbasePY.py  optimisation  pygame_test.py  rrt_test  testRRT.py
Tools/Simulation_test_Gazebo_/: test_simu.workspace.autosave
Tools/Simulation_test_Gazebo_/src/test_simu/simu_packs/: package.xml
Tools/Simulation_test_Gazebo_/src/test_simu/simu_packs/launch/: test_world.launch
Tools/Simulation_test_Gazebo_/src/test_simu/simu_packs/worlds/: test_world.xml
Vision/: README.md  aruco_detection_openmv.py  arucostraight.py  requirements.txt
Vision/Aruco detection/: detectAruco.py  detectAruco_3cams  deteect&transform3cams_withoutStack
Vision/Euro_venv/: pyvenv.cfg
Vision/Flower and pots Model/: labels.txt
Vision/Main/: Kalman.py  Model.py  TOPDOWN_vf  detectAruco.py  main  main.py  save_data.py  tempCodeRunnerFile.python  test_model_image.py
Vision/calibration/: calibration  capture_chessboard from an mp4.py  capture_images_chessboard
Vision/cv2+openmv/: capture_video_openMv.py  capture_video_openMv.py.autosave  openCv capturing and analysing.py
Vision/distance estimation/: distance.py
Vision/generate_aruco_markers/: main.py
(+627 files in other folders)
