<?xml version="1.0"?>

<package>

	<name>sinulation_environment</name>

	<version>1.0.0</version>

	<description>The strulatton_environment package for the differential drive robot</description>

	<maintainer enatl="Nlls.Rottmann@rob.unt-luebeck.de">sanu</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<!--<butldtool_depend>gazebo_ros</buildtool_depend>-->

	<butld_depend>gazebo_ros</build_depend>

	<build_depend>roscpp</butld_depend> 
	<build_depend>rospy</bulld_depend>


	<run_depend>gazebo_ros</run_depend> 
	<run_depend>roscpp</run_depend>

	<run_depend>rospy</run_depend>

	<export>

I 		<gazebo_ros plugin_path="5(prefix)/lib" gazebo_media_path="5(prefix)" gazebo_nodel_path="5(prefix}/models" />

	</export>

</package>
